--- a/assets/pages/main/styles.css
+++ b/assets/pages/main/styles.css
@@ -1,12 +1,11 @@
 body{
-   color:#ffff;
    width: 1280px;
    margin: auto;
    font-family: Arial, Helvetica, sans-serif;
+   letter-spacing: 0.06em;
 }
-h1 h2 h3{
-    font-family: Georgia, 'Times New Roman', Times, serif
-}
+
+
 header{
     display: inline-flex;
     flex-direction: row;
@@ -44,6 +43,7 @@ color: #F1CDB3;
     padding-top: 2.2rem;
     padding-left: 2.4rem;
     margin: 0;
+    color: #FAFAFA;
 }
 /*nav starts*/
 nav{
@@ -109,13 +109,25 @@ nav ul li :first-child{
     
     width: 207px;
     border-radius: 100px;
+    border: 0px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:#292929;
     background-color: #F1CDB3;;
-  display: flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 45px;
+}
+.btn-secondary{
+display: flex;
 flex-direction: column;
-align-items: center;
-padding: 15px 45px;
+align-items: flex-start;
+padding: 0px;
+width: 187px;
+height: 52px;
+left: 41.5px;
+top: 353px;
+
 }
 /*about section*/
 
@@ -162,4 +174,62 @@ line-height: 160%;
 color: #4C4C4C;
 }
 /*about ends*/
+.cards{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #545454;;
+    justify-content: space-around;
+   
+}
+.cards p{
+font-family: 'Georgia';
+font-style: normal;
+font-weight: 400;
+font-size: 20px;
+line-height: 23px;
+/* identical to box height */
+display: flex;
+align-items: center;
+text-align: center;
+letter-spacing: 0.06em;
 
+/* color-dark-l */
+
+color: #545454;
+}
+/* our-friends-section*/
+
+#our-friends{
+    display: flex;
+    flex-direction: column;
+    flex-wrap:wrap;
+    align-items: center;
+}
+#card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #FAFAFA;
+    border-radius: 9px;
+     margin: 2.5rem;
+    
+}
+
+ .circle {
+        border-radius: 50%;
+        width: 52px;
+        height: 52px;
+        padding: 23px 19px;
+        background: #fff;
+        border: 2px solid #F1CDB3;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 23px 19px;
+        box-sizing: border-box;
+        filter:drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.35)); 
+       border-radius: 100px;
+      }
