--- a/assets/pages/main/styles.css
+++ b/assets/pages/main/styles.css
@@ -289,3 +289,18 @@ width: 165px;
 line-height: 25px;
 text-align: center;
 }
+
+/*Donation*/
+#donate{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.donation-content2{
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
