--- a/pages/main/main/styles.css
+++ b/pages/main/main/styles.css
@@ -1,3 +1,4 @@
+
 body{
    width: 1280px;
    margin: auto;
@@ -87,21 +88,29 @@ nav ul li :first-child{
     flex-direction: row-reverse;
     flex-wrap: nowrap;
     align-content: space-around;
+    
 
 }
 
 .intro-text h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 400;
     font-size: 44px;
     font-weight: 400;
-    width: 310px;
+    width: 350px;
     line-height: 57px;
+    vertical-align: center;
+    margin-top: 200px;
+    font-style: normal;
 }
 .intro-text{
-    width: 37vw;
+    width: 30vw;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 15px;
+    line-height: 24px;
 }
 
 
@@ -117,6 +126,7 @@ nav ul li :first-child{
     flex-direction: column;
     align-items: center;
     padding: 15px 45px;
+    margin-top: 50px;
 }
 .btn-secondary{
 display: flex;
@@ -292,6 +302,7 @@ text-align: center;
 
 /*Donation*/
 #donate{
+    padding-bottom: 100px;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -303,4 +314,85 @@ text-align: center;
     display: flex;
     flex-direction: column;
     padding: 20px;
+}
+.donation-content2 h5{
+    font-size: 15px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: normal;
+    justify-content: space-between;
+    color:#cccccc;
+    font-family: Arial, Helvetica, sans-serif;
+
+    
+}
+.donation-content2 p {
+font-size: 12px;
+font-style: italic;
+line-height: 18px;
+}
+
+.bankcard{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background-color: #F1CDB3;
+    padding: 10px;
+    border-radius: 9px;
+    width: 90%;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:#545454;
+    font-weight: normal;
+    font-size: 20px;
+    letter-spacing: 1px;
+    justify-content: center;
+}
+#donate h3{
+font-family: Georgia, 'Times New Roman', Times, serif;
+color:#545454;
+font-size: 35px;
+letter-spacing: 6%;
+line-height: 130%;
+text-align: left;
+vertical-align: center;
+}
+/*footer*/
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 40px 40px 0px 40px;
+    background-image: url("/assets//images/start-screen-background.png");
+    background-repeat: no-repeat;
+    background-size: 100% 100%; 
+    padding-top: 2.2rem;
+    padding-left: 2.4rem;
+    margin: 0;
+    color: #FAFAFA;
+}
+
+footer h3{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 34px;
+    font-weight: normal;
+}
+footer h4{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px;
+    font-size: medium;
+    font-weight: 400;
+    color: #F1CDB3;
+}
+footer img{
+    padding-right: 10px;
+    font-size: small;
+}
+footer div{
+    width: 22%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-self:center
 }
