--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -38,7 +38,7 @@ letter-spacing: 0.06em;
 color: #F1CDB3;
 }
 .top-section{
-    background-image: url("/assets//images/start-screen-background.png");
+    background-image: url("/assets/images/start-screen-background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%; 
     padding-top: 2.2rem;
@@ -77,7 +77,7 @@ a{
 color: #CDCDCD;
 text-decoration: none;
 }
-nav ul li :first-child{
+nav li:first-child a {
     border-bottom:2px solid wheat ;
     padding-bottom: 2px;
 }
@@ -395,4 +395,10 @@ footer div{
     flex-direction: column;
     align-content: center;
     justify-self:center
+    
+}
+
+.footerdog{
+    bottom: 0px;
+    margin-bottom: -70px;
 }
