--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -38,7 +38,7 @@ letter-spacing: 0.06em;
 color: #F1CDB3;
 }
 .top-section{
-    background-image: url("/assets/images/start-screen-background.png");
+    background-image: url("../../assets/images/start-screen-background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%; 
     padding-top: 2.2rem;
