--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -16,13 +16,15 @@ header{
 }
 .logo{
     top:80px;
+    align-items: center;
 }
 .logo h5{
-   font-family: 'Arial';
+font-family: 'Arial';
 font-style: normal;
 font-weight: 400;
 font-size: 13px;
-
+margin-top: 5px;
+margin-left: 5px;
 }
 
 h1{
@@ -30,7 +32,7 @@ font-family: 'Georgia';
 font-style: normal;
 font-weight:100;
 font-size: 32px;
-
+margin-bottom: 0px;
 /* or 35px */
 display: flex;
 align-items: center;
@@ -45,6 +47,8 @@ color: #F1CDB3;
     padding-left: 2.4rem;
     margin: 0;
     color: #FAFAFA;
+    margin-bottom: -3px;
+    background-size: 100vw;
 }
 /*nav starts*/
 nav{
@@ -126,18 +130,22 @@ nav li:first-child a {
     flex-direction: column;
     align-items: center;
     padding: 15px 45px;
-    margin-top: 50px;
-}
-.btn-secondary{
-display: flex;
-flex-direction: column;
-align-items: flex-start;
-padding: 0px;
-width: 187px;
-height: 52px;
-left: 41.5px;
-top: 353px;
+    font-size: larger;
+    margin: 20px;
 
+}
+.btn-card{
+ width: 207px;
+    border-radius: 100px;
+    border: 0px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:#292929;
+    background-color: #F1CDB3;;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 45px;
+    margin-bottom: 50px;
 }
 /*about section*/
 
@@ -157,6 +165,7 @@ width: 29vw;
 display: flex;
 flex-direction: column;
 align-items:  flex-start;
+justify-content: left;
 padding: 4rem;
 }
 .about-txt h3{
@@ -215,7 +224,7 @@ color: #545454;
     align-items: center;
     background-color: #F6F6F6;
 }
-#card{
+.card{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -314,21 +323,25 @@ text-align: center;
     display: flex;
     flex-direction: column;
     padding: 20px;
+    font-size: larger;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: normal;
 }
 .donation-content2 h5{
     font-size: 15px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: normal;
     justify-content: space-between;
-    color:#cccccc;
+    color: #545454;
     font-family: Arial, Helvetica, sans-serif;
-
+    margin: 0;
     
 }
 .donation-content2 p {
 font-size: 12px;
 font-style: italic;
 line-height: 18px;
+color:#cccccc;
 }
 
 .bankcard{
@@ -351,7 +364,7 @@ font-family: Georgia, 'Times New Roman', Times, serif;
 color:#545454;
 font-size: 35px;
 letter-spacing: 6%;
-line-height: 130%;
+line-height: 100%;
 text-align: left;
 vertical-align: center;
 }
@@ -401,4 +414,18 @@ footer div{
 .footerdog{
     bottom: 0px;
     margin-bottom: -70px;
+}
+
+/*Effectc*/
+
+.card:hover{
+box-shadow: 20px 20px 50px rgb(189, 150, 150);
+}
+
+.card:hover .btn-card{
+    background-color: #f85b5b;
+}
+
+.circle:hover{
+    background-color: #e6aeae;
 }
