--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -6,7 +6,6 @@ body{
    letter-spacing: 0.06em;
 }
 
-
 header{
     display: inline-flex;
     flex-direction: row;
@@ -245,6 +244,21 @@ letter-spacing: 0.06em;
 color: #545454;
 }
 
+.circleb{
+  border-radius: 50%;
+  width: 52px;
+  height: 52px;
+  padding: 23px 19px;
+  background: #fff;
+  border: 2px solid #F1CDB3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 23px 19px;
+  box-sizing: border-box;
+  
+  border-radius: 100px;
+}
  .circle {
   border-radius: 50%;
   width: 52px;
@@ -426,6 +440,9 @@ box-shadow: 20px 20px 50px rgb(189, 150, 150);
     background-color: #f85b5b;
 }
 
+.circleb:hover{
+    background-color: #e6aeae;
+}
 .circle:hover{
     background-color: #e6aeae;
 }
