fix: change cursor

--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -17,6 +17,9 @@ header{
     top:80px;
     align-items: center;
 }
+#logo:hover{
+     cursor: -webkit-grab; cursor: grab;
+}
 .logo h5{
 font-family: 'Arial';
 font-style: normal;
