--- a/pages/pets/styles.css
+++ b/pages/pets/styles.css
@@ -1,3 +1,8 @@
+
+*{
+    margin: 0;
+    box-sizing: border-box;
+}
 body{
     width: 1280px;
     margin: auto;
@@ -10,6 +15,8 @@ header{
     top:36px;
     left: 36px;
     width: 1200px;
+    height: 120px;
+    margin-bottom: 10px;
     
 }
 #logo{
@@ -18,23 +25,49 @@ header{
     color:#545454;
     font-size:2rem;
     font-weight: 100;
-    padding-left: 14px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-left: 44px;
+    margin-bottom: 10px;
+    margin-top: 20px;
+}
+#logo p{
+    top:60px;
+   
 }
 #logo:hover{
      cursor: -webkit-grab; cursor: grab;
 }
+
+.logo p{
+    margin-left: 46px;
+    margin-top: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 nav{
     display: flex;
     align-items: center;
     overflow: hidden;
     background-color: transparent;
-    top:40px;
+    margin-right: -48px;
+    color: #545454;
+    margin-top: -20px;
+   
+}
+
+nav ul{
+    margin-top: 0;
 }
 a{
     text-decoration: none;
-    color: black;    
+    color: #545454; 
     font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 0.006rem;
     
+}
+nav :nth-child(2) {
+    border-bottom:2px solid wheat ;
+    padding-bottom: 2px;
 }
 nav ul li{
     display: inline-block;
@@ -42,9 +75,14 @@ nav ul li{
 }
 
 /*main*/
-
+main{
+    margin-top: -60px;
+    padding: 0;
+    height: auto;
+}
 /*Card section*/
 #pets{
+    margin-top: 0px;
     background-color: #F6F6F6;
     position: relative;
     top:40px;
@@ -57,13 +95,14 @@ nav ul li{
     display: flex;
     flex-direction: column;
     justify-self: center;
-    width: 430px;
-    font-weight: 400;
-    font-size: 2rem;
+    width: 420px;
+    font-weight: 100;
+    font-size: 2.2rem;
     color:#545454;
     letter-spacing: 0.06rem;
     text-align: center;
-    margin-top: 6rem;
+    margin-top: 5.4rem;
+    margin-bottom: 6.5rem;
     font-style: normal;
 
 }
@@ -77,7 +116,7 @@ nav ul li{
     color: #545454;;
     justify-content: center;
     flex-wrap: wrap;
-    flex-basis: auto;   
+    flex-basis: auto;
 }
 .cards p{
 font-family: 'Georgia';
@@ -98,12 +137,18 @@ color: #545454;
     align-items: center;
     background-color: #FAFAFA;
     border-radius: 9px;
-    margin: 1rem;
+    margin-left: 1.5rem;
+    margin-right: 1rem;
+    margin-bottom: 1.5rem;
 }
+.cards .card img{
+    padding-top: 40px;
+    padding-bottom: 30px;
+} 
 .btn-card{
-    width: 207px;
+    width: 187px;
+    height: 54px;
     border-radius: 100px;
-    border: 0px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     color:#292929;
     background-color:transparent;
@@ -111,8 +156,14 @@ color: #545454;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 15px 45px;
-    margin-bottom: 50px;
+    padding-bottom: 25px;
+    padding-top: 15px;
+    margin-bottom: 27px;
+    margin-top: 30px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1rem;
+    align-content: center;
+    letter-spacing: 0.06rem;
 }
 
 
@@ -122,13 +173,11 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 40px 40px 0px 40px;
     background-image: url("../../assets/images/start-screen-background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%; 
-    padding-top: 2.2rem;
-    padding-left: 2.4rem;
-    margin: 0;
+    padding-top: 1rem;
+    margin-top: 0px;
     color: #FAFAFA;
 }
 
@@ -136,21 +185,28 @@ footer h3{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 34px;
     font-weight: normal;
+    margin-bottom: 0rem;
 }
 footer h4{
     display: flex;
     flex-direction: row;
     align-items: center;
-    padding: 10px;
     font-size: medium;
     font-weight: 400;
     color: #F1CDB3;
+    margin-bottom: 0.5rem;
+    margin-top: 1rem;
+}
+
+.suggestion{
+    margin-left: 3rem;
+
 }
 /* Pagination */
 .pagination{
     text-decoration: none;
     display: flex;
-    margin-top: 100px;
+    margin-top: 60px;
     margin-bottom: 100px;
 }
 .pagination a {
@@ -176,6 +232,10 @@ footer h4{
 }
 
 /*footer*/
+footer{
+    padding-top: 60px;
+    height: 380px;
+}
 footer img{
     padding-right: 10px;
     font-size: small;
@@ -186,11 +246,23 @@ footer div{
     display: flex;
     flex-direction: column;
     align-content: center;
-    justify-self:center
+    justify-self:center;
+    margin:40 40 0 40;
     
 }
 
+footer h4{
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    letter-spacing: 0.006rem;
+    padding-top: 20px;
+}
+
 .footerdog{
-    bottom: 0px;
-    margin-bottom: -70px;
+        width: 21vw;
+        display: flex;
+        margin-bottom: -2vh;
+        margin-left: 1.33rem;
+
+
 }
