--- a/pages/pets/styles.css
+++ b/pages/pets/styles.css
@@ -102,8 +102,7 @@ main{
     letter-spacing: 0.06rem;
     text-align: center;
     margin-top: 5.4rem;
-    margin-bottom: 4.5rem;
-    font-style: normal;
+    margin-bottom: 3.5rem;
 
 }
 
@@ -171,7 +170,9 @@ color: #545454;
 .pagination{
     text-decoration: none;
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 125px;
+    margin-top: 10px;
+    margin-top: 28px;
 }
 .pagination a {
   border-radius: 50%;
@@ -186,7 +187,8 @@ color: #545454;
   box-sizing: border-box;
   border-radius: 100px;
   align-items: center;
-  margin: 7px;
+  margin-left: 24px;
+  
 }
 .pagination a[disabled]{
     color: gray;
@@ -202,16 +204,15 @@ footer{
     background-image: url("../../assets/images/start-screen-background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%; 
-    padding-top: 1rem;
-    margin-top: 0px;
     color: #FAFAFA;
-    padding-top: 60px;
-    height: 390px;
+    padding-top: 75px;
+    height: 47vh;
+
 }
 
 footer h3{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 32px;
+    font-size: 38px;
     font-weight: 400;
     margin-bottom: 1rem;
     letter-spacing: 2px;
@@ -224,13 +225,19 @@ footer h4{
     font-size: 20px;
     font-weight: 400;
     color: #F1CDB3;
-    margin-bottom: 0.5rem;
-    margin-top: 1rem;
+    margin-bottom: 2.5rem;
+    padding: auto;    
 }
 
 .suggestion{
     width: 27%;
     padding-bottom: 40px;
+    margin-left: 40px;
+}
+
+.visit{
+    margin-left: 24px;
+    
 }
 
 
@@ -252,9 +259,9 @@ footer div{
 
 
 .footerdog{
-        width: 287px;
-        display: flex;
-        margin-left: 1.33rem;
+        width: 297px;
+        margin-left: 2.13rem;
+        margin-bottom: 0px;
 }
 
 
