--- a/pages/pets/styles.css
+++ b/pages/pets/styles.css
@@ -206,7 +206,7 @@ footer{
     background-size: 100% 100%; 
     color: #FAFAFA;
     padding-top: 75px;
-    height: 400px;
+    height: auto;
 
 }
 
@@ -274,7 +274,7 @@ nav li a:hover{
     border-bottom:2px solid wheat ;
     padding-bottom: 2px;
 }
-
+img{max-width: 100%;}
 .card:hover{
 box-shadow: 20px 20px 50px rgb(189, 150, 150);
 background-color: #f8f4f1;
@@ -287,3 +287,66 @@ background-color: #f8f4f1;
     pointer-events: none;
 }
 
+
+
+@media screen and (max-width:1280px){
+    header{
+        margin-top: -20px;
+    }
+    nav{
+        height: 120px;
+    }
+    nav a{
+        font-size: 15px;
+    }
+
+    .cards{
+        flex-wrap: wrap;
+    }
+    .card{
+            flex-basis: 47%;
+            width: 100px;
+    }
+
+       #footer{
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .footerItem{
+        flex-basis: 47%;
+        align-items: center;
+        margin: 0px;
+        width: 234px;
+        align-content: center;
+    }
+    #footer .footerdog{
+        width: max-content;
+    }
+    .suggestion .visit{
+        align-items: flex-start;
+        align-content: flex-end;
+        width: 40%;
+
+    }
+    body{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        width: auto;
+    }
+    header{
+        justify-content: space-evenly;
+        width: auto;
+    }
+    
+        main{
+            width: 100vw;
+        }
+    
+}
+
+
+
+@media screen and (max-width:769px){
+
+}
