--- a/pages/pets/styles.css
+++ b/pages/pets/styles.css
@@ -247,15 +247,6 @@ footer img{
     padding-right: 10px;
     font-size: small;
 }
-footer div{
-    width: 22%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-self:center;
-    
-}
 
 
 .footerdog{
@@ -289,9 +280,11 @@ background-color: #f8f4f1;
 
 
 
+
 @media screen and (max-width:1280px){
     header{
-        margin-top: -20px;
+        justify-content: center;
+        width: auto;
     }
     nav{
         height: 120px;
@@ -309,8 +302,10 @@ background-color: #f8f4f1;
     }
 
        #footer{
-        flex-wrap: wrap;
-        justify-content: space-between;
+           flex-wrap: wrap;
+    overflow-wrap: break-word;
+    justify-content: center;
+}
     }
     .footerItem{
         flex-basis: 47%;
@@ -334,19 +329,73 @@ background-color: #f8f4f1;
         justify-content: space-evenly;
         width: auto;
     }
-    header{
-        justify-content: space-evenly;
-        width: auto;
-    }
-    
+   
         main{
             width: 100vw;
         }
     
+#hamburger{
+    display: none;
 }
-
 
 
 @media screen and (max-width:769px){
 
+    header {
+    justify-content: space-between;
+    width: 100vw;
+}
+main{
+    flex-direction: column;
+    width: 100vw;
+}
+
+#pets{
+    width: 100%;
+} 
+
+#hamburger{
+    border: 0;
+    background-color: transparent;
+    padding-right:2rem ;
+    color: #e6aeae;
+    font-size: 30px;
+    display: block;
+}
+ul{
+    list-style-type: none;
+    background-color: transparent;
+    overflow: hidden;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    height: auto;
+    margin-left: 100px;
+   
+}
+li {
+    background-color: transparent;
+    margin: 10px;
+    color: #e27629;
+}
+a{
+color: #9c9a9a;
+text-decoration: none;
+font-size: 1rem;
+margin-top: 1rem;
+}
+#nav-list{
+    display: none   ;
+    background-color: #292929;
+    color: #e6aeae;
+    width: 200px;
+}
+
+.cards{
+    width: 100vw;
+}
+footer{
+    flex-direction: column;
+    flex-basis: 60%;
+}
 }
