--- a/pages/pets/styles.css
+++ b/pages/pets/styles.css
@@ -425,4 +425,25 @@ footer h3{
 #pets h2{
     width:89vw;
 }
+
+.pagination a {
+    border-radius: 50%;
+    width: 3rem;
+    height: 3rem;
+    padding: 1rem;
+    background: #fff;
+    border: 2px solid #F1CDB3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+    border-radius: 100px;
+    align-items: center;
+    margin-left: 1rem;
+
+}
+.btn-card{
+    width: 11rem;
+    height: 3.5rem;
+}
 }
