--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -1,5 +1,6 @@
 h3{
     font-weight: 100;
+
 }
 body{
    margin: auto;
@@ -398,7 +399,7 @@ footer{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 40px 40px 0px 40px;
+    padding: 10px 10px 0px 10px;
     background-image: url("../../assets/images/start-screen-background.png");
     background-repeat: no-repeat;
     background-size: 100% 100%; 
@@ -410,10 +411,13 @@ footer{
 
 footer h3{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 34px;
+    font-size: 32px;
     font-weight: normal;
+    margin: 4px;
+
 }
 footer h4{
+    margin:0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -438,7 +442,7 @@ footer div{
 
 .footerdog{
     bottom: 0px;
-    margin-bottom: -70px;
+    margin-bottom: -120px;
 }
 
 /*Effectc*/
@@ -488,7 +492,7 @@ nav li a:hover{
        margin-left: 15%;
        }
        .intro p{
-           width: 61vw;
+           width: 31vw;
            padding: 4px;   }
        .intro h2{
            width: 70vw;
@@ -578,6 +582,7 @@ nav li a:hover{
         height: 400px;
     }
 
+
 }
 
 
@@ -649,7 +654,7 @@ nav li a:hover{
     
 }
 #icons{
-    justify-content: flex-start;
+    justify-content: center;
     flex-basis: 50%;
 }
   #about{
