feat:footer responsiveness adds on

--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -342,7 +342,7 @@ text-align: center;
     justify-content: center;
     font-family: Georgia, 'Times New Roman', Times, serif;
     height: 480px;
-     background-color: #f6f6f6;"
+     background-color: #f6f6f6";
 }
 .donation-content2{
     width: 30%;
@@ -442,7 +442,6 @@ footer div{
 
 .footerdog{
     bottom: 0px;
-    margin-bottom: -120px;
 }
 
 /*Effectc*/
@@ -617,7 +616,7 @@ nav li a:hover{
     display: block;
 }
 .top-section .btn-main{
-    margin-left: auto;
+    margin-left:    ;
 }
 
 #nav-list{
@@ -639,7 +638,14 @@ nav li a:hover{
       width: 300%;
       padding-left: 0px;
   }
-
+ footer .visit h4{
+    padding-top:30px;
+    padding-bottom: 20px;
+}
+footer .visit h3{
+    padding-bottom: 10px;
+    padding-top: 10px;
+}
   .cards{
       flex-direction: column;
   }
