--- a/pages/main/styles.css
+++ b/pages/main/styles.css
@@ -177,17 +177,17 @@ justify-content: space-between;
 }
  .modal{
   visibility:hidden;
-   display: flex;
-   justify-content: center;
+   display: grid;
+  justify-content: center;
   position: fixed;
-  right: 0;
-  top: 0;
+  right: 25%;
+  top: 25%;
   margin: auto;
   z-index: 9999;
   overflow: auto;
   width: 50%;
   height: 50%;
-  padding-top: 100px;
+  margin: auto;
   background-color: rgb(236, 232, 232);
 
 } 
@@ -201,9 +201,13 @@ justify-content: space-between;
     padding-bottom: 2rem;
 }
 .modal button{
-width: 52px;
+    width: 52px;
     height: 52px;
-    background: #fff;
+    background-color:transparent;
+    position: fixed;
+    right: inherit;
+    margin-top: -46px;
+    margin-right: -50px;
     border: 2px solid #F1CDB3;
     display: flex;
     flex-direction: column;
@@ -535,7 +539,17 @@ nav li a:hover{
     transform:rotate(90deg);
 }
 
+ #cover{
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  visibility: hidden;
 
+    }
 
 @media screen and ( max-width:1280px) {
     body{
